# presentations_AI

./: .env.example  .gitignore  AI.pptx  Caddyfile  README.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: config.py  database.py  main.py  models.py
backend/app/ai/: http_errors.py  registry.py  safety.py  types.py
backend/app/assets/: dvfu_template.pptx  system_template.pptx
backend/app/core/: content_disposition.py  deps.py  logging_setup.py  public_url.py  security.py
backend/app/routers/: agents.py  auth.py  presentations.py  templates.py
backend/app/schemas/: agents.py  auth.py  presentations.py  semantic_slides.py  slides.py  template_blueprint.py  templates.py
backend/app/services/: ai_json.py  analytics_outline.py  auth_service.py  dvfu_generator.py  email_cooldown.py  email_service.py  image_normalizer.py  outline_limits.py  password_reset_service.py  pdf_template_style_extractor.py  pptx_builder.py  pptx_fonts.py  pptx_kinds.py  presentation_build_service.py  presentation_service.py  registration_service.py  semantic_slide_planner.py  slide_build_controller.py  slide_content_density.py  slide_image_plan.py  slide_layout_selector.py  slide_palette_colors.py  slide_payload_normalizer.py  slide_planner.py  slide_quality.py  slide_text_controller.py  slide_text_limits.py  source_file_parser.py  source_image_extractor.py  source_topic_enrichment.py  system_template.py  template_ai_style_analyzer.py  template_geometry_analyzer.py  template_palette.py  (+5 more)
(+107 files in other folders)
