[project]
name = "backend"
version = "0.1.0"
description = "Presentations AI backend"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.128.8",
    "uvicorn>=0.39.0",
    "sqlalchemy>=2.0.0",
    "pymysql>=1.1.0",
    "pydantic-settings>=2.0.0",
    "email-validator>=2.0.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0,<5",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.9",
]
